add second node

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,10 +5,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:lF2uyMLhydjSb6827E4=,iv:kyoqCt/otabQ5Xftq/fFbDoebicZjlN0IP2ReDBFyEw=,tag:LLEYhQ3OknqHjn8oeFhLpQ==,type:str]
-    CLUSTER_DOMAIN: ENC[AES256_GCM,data:OP601PKSow1npYBV3mc=,iv:UUp7K5xFhlM/Nz/INmmbhB2EmEtWwp17xE2yjHA7nEs=,tag:oIOpjT3Xi9ltCcJhpnaYlQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:yE682+csirU7WZ/dbNjVvvMF/Jr2Kg==,iv:XozVKqEroEHAi0HcpaF65SP2M2smT8LzQDQdjPLo1Nw=,tag:R8DVYtaOXJQI3H21ZCjm4g==,type:str]
-    FS_GROUP: ENC[AES256_GCM,data:Tj+YhgU=,iv:KbUJisgtNi4IWKjzgionp3sx8v7s3T5+EbUazEtlZDE=,tag:KWARRJN2Z5jknJualb/UAg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:0l3wL72MoJmEKN82MjQ=,iv:AtaA5lLukikgHrv/Dr9zdCPx9w9GRBzqbHrmS+G4HK8=,tag:PZ0fpy0xA+tOsjgSwcfikg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:PZFOjZyIW6vCwj4jDT2l3o/0NOk+sw==,iv:TlygrxEv7kiWBiarfx6v+COPrYyKM510HGmreDAkTQ0=,tag:hjtPwfAf9245K3/5xN6Lrw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +16,14 @@ sops:
         - recipient: age1257acz7c2nyglyxaq6ulxwdndrkvl8u7tx84hqvq5qp04ekws38s20gzxp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzSE13NXYwSjJ5czdrZGd1
-            aWdNd25sVUpwcVJyclQvS2Ivdm1aY2dOMXhnClNNVmhEdjF2RW1odDZrSW1zV2Ri
-            WE9JenBIYTlFdThKaXdDc2o3alFuc1EKLS0tIDE1a1ZTSnFKVWVCMDNvZXZyd2t3
-            dzJrYzRjYnBnR2E2S0E1MEJIdDB3MncKKmBvG2LCCDxZD1n9cswfopxoGjuQOllc
-            +PRx4cL7UyRiRsRj079x8hzCBUrVGTvLMnmV8oos8ikW48kW9IOC0g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxU1k0STFmZS9VdW9tdUo5
+            NWN2RE5CYlpIN0J2MU94S0hPN3kvZytzbWpRCjRXK21WdGxiOW1xMEkwMElzNU8r
+            eFBHUENSR0Z5UW5nMDloMUE5MndLblUKLS0tIFZNeFZwNGNxT1poU0JIRVlkWlJt
+            NkJXbnIrZHl3ODVvR2lEakZDU1RWa2sKQoXXOawASJvNgAk1la+Ia2mX3kCY6YFP
+            rJZIv2QBgBNv/m7R8Urs8gebX0hMuXUudd1aXD6u7sb3QBTnHOL1xQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-20T01:31:26Z"
-    mac: ENC[AES256_GCM,data:Yi8PkMZL+yhQjw5xwCvsBRyUqTIQLyZ4HskANr9uO7vMsGMBtUgG+GH4VbhQGO/xOk1RBGEXE5rqX4htDYk2yCnc4zcoAriiio0IuSxRjXfVLBOB+A7I7kec0SQ6KTC1/yUKZc6SPoVQNdHDSC/HG/WAdRHNJWE4CuOuCPPa3mw=,iv:2xcqwMS9vrJD3QO0X57tQbYJyQpn5Kx9Pm9GWQfPPlY=,tag:OIEz+WMYNSAAHUWJB3qjEg==,type:str]
+    lastmodified: "2022-04-20T05:21:56Z"
+    mac: ENC[AES256_GCM,data:zz3YuVyidHlyeEOlOGh2k85dpBt45/xEAopwA6KyAZBPUzSTjojOQyJfDcqfUiV5skZGda3xiT+gya395OsnDTtXmFIfrmOgHb39fqIGyB/1dAMPZM/DXyQm1NoxOb0P0qr5mwxJbfzEOCota7muXmMQrnM41cm2+Nvxw5rCnco=,iv:JukQ9kmDz8zAvOmck3jwz7kKBNhLYt1TsfELMJdxQLE=,tag:RrqZyEedYzCe+CLw1nrmWw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
