fixup some media

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -34,6 +34,7 @@ spec:
           - networking
           - kubernetes-dashboard
           - longhorn-system
+          - media
       name: "you"
       customApps: []
       groups:
