--- a/cluster/apps/networking/k8s-gateway/helm-release.yaml
+++ b/cluster/apps/networking/k8s-gateway/helm-release.yaml
@@ -17,7 +17,7 @@ spec:
       interval: 5m
   values:
     fullnameOverride: k8s-gateway
-    domain: ${SECRET_DOMAIN}
+    domain: ${CLUSTER_DOMAIN}
     ttl: 1
     service:
       type: LoadBalancer
