--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,8 +5,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:0l3wL72MoJmEKN82MjQ=,iv:AtaA5lLukikgHrv/Dr9zdCPx9w9GRBzqbHrmS+G4HK8=,tag:PZ0fpy0xA+tOsjgSwcfikg==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:PZFOjZyIW6vCwj4jDT2l3o/0NOk+sw==,iv:TlygrxEv7kiWBiarfx6v+COPrYyKM510HGmreDAkTQ0=,tag:hjtPwfAf9245K3/5xN6Lrw==,type:str]
+    CLUSTER_DOMAIN: ENC[AES256_GCM,data:afLTnUeCcX7RvPE3uRw=,iv:y5MTRnQVmeoiFgjN4AslOiyGEJfpuC7kNti2lqWmk00=,tag:RPz1+CduFdta1m9VjdvnDg==,type:str]
+    FS_GROUP: ENC[AES256_GCM,data:6DFyDaU=,iv:OOr32BqJ0Va0X0T9M97TUK6PN9Du5SsoOZ6BmGhFuqg=,tag:bBKU66nemzsFyTiXmiWeRA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +23,8 @@ sops:
             NkJXbnIrZHl3ODVvR2lEakZDU1RWa2sKQoXXOawASJvNgAk1la+Ia2mX3kCY6YFP
             rJZIv2QBgBNv/m7R8Urs8gebX0hMuXUudd1aXD6u7sb3QBTnHOL1xQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-20T05:21:56Z"
-    mac: ENC[AES256_GCM,data:zz3YuVyidHlyeEOlOGh2k85dpBt45/xEAopwA6KyAZBPUzSTjojOQyJfDcqfUiV5skZGda3xiT+gya395OsnDTtXmFIfrmOgHb39fqIGyB/1dAMPZM/DXyQm1NoxOb0P0qr5mwxJbfzEOCota7muXmMQrnM41cm2+Nvxw5rCnco=,iv:JukQ9kmDz8zAvOmck3jwz7kKBNhLYt1TsfELMJdxQLE=,tag:RrqZyEedYzCe+CLw1nrmWw==,type:str]
+    lastmodified: "2022-04-20T05:46:31Z"
+    mac: ENC[AES256_GCM,data:bkVysjwRAb7Ei++NLn+hsae80/gxqlAp9ecUQ9DJeGxreZeUdmLWamqlw2ZXr9tR3aAhswAIZva41uV9r9YtFx//XXjXyOIVJexbeGJ9dOotEBmZqMPjwc+TVjiy8Dkhea4mnNURLoNPVnylc7WRThQZerLoYsYjGlzIR+1gaeI=,iv:bqnJW5EWzfhg4Ao2+CdnbZLKvhsXbk++OIcOggRHVaA=,tag:APKgX5k5lmRvvXKAu3OETg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
