--- a/cluster/core/cert-manager/letsencrypt-production.yaml
+++ b/cluster/core/cert-manager/letsencrypt-production.yaml
@@ -18,4 +18,4 @@ spec:
               key: api-key
         selector:
           dnsZones:
-            - ${SECRET_DOMAIN}
+            - ${CLUSTER_DOMAIN}
