--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -35,6 +35,7 @@ spec:
           - kubernetes-dashboard
           - longhorn-system
           - media
+          - home
       name: "you"
       customApps: []
       groups:
