--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - cert-manager.yaml
   - csi-driver-nfs.yaml
+  - home.yaml
   - kubernetes-dashboard.yaml
   - longhorn-system.yaml
   - media.yaml
