add tika and gotenburg services

--- a/cluster/apps/home/paperless/helm-release.yaml
+++ b/cluster/apps/home/paperless/helm-release.yaml
@@ -90,10 +90,12 @@ spec:
         ports:
           http:
             enabled: true
+            primary: false
             port: 3000
       tika:
         primary: false
         ports:
           http:
             enabled: true
+            primary: false
             port: 9998
