--- a/cluster/core/home/persistent-volume.yaml
+++ b/cluster/core/home/persistent-volume.yaml
@@ -44,3 +44,26 @@ spec:
     volumeAttributes:
       server: ${NAS_ADDR}
       share: /volume1/shared/paperless/data
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: code-appdaemon-pv
+spec:
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: nfs-csi
+  mountOptions:
+    - nconnect=8  # only supported on linux kernel version >= 5.3
+    - hard
+    - nfsvers=4.1
+  csi:
+    driver: nfs.csi.k8s.io
+    readOnly: false
+    volumeHandle: paperless-data-pv-id
+    volumeAttributes:
+      server: ${NAS_ADDR}
+      share: /volume1/shared/code/appdaemon
