--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -49,6 +49,7 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        size: 8Gi
       media:
         enabled: true
         existingClaim: media-pv-claim
