--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,9 +5,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:PZFOjZyIW6vCwj4jDT2l3o/0NOk+sw==,iv:TlygrxEv7kiWBiarfx6v+COPrYyKM510HGmreDAkTQ0=,tag:hjtPwfAf9245K3/5xN6Lrw==,type:str]
-    CLUSTER_DOMAIN: ENC[AES256_GCM,data:afLTnUeCcX7RvPE3uRw=,iv:y5MTRnQVmeoiFgjN4AslOiyGEJfpuC7kNti2lqWmk00=,tag:RPz1+CduFdta1m9VjdvnDg==,type:str]
-    FS_GROUP: ENC[AES256_GCM,data:6DFyDaU=,iv:OOr32BqJ0Va0X0T9M97TUK6PN9Du5SsoOZ6BmGhFuqg=,tag:bBKU66nemzsFyTiXmiWeRA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:oDBxD69s4Ik7RocjNNQ=,iv:61QFJ/DpdpNSCuQg60W2gJZLy97loBfCvE+cVAFhzF4=,tag:3Jz0guyrF4RT5g18xFsJ4A==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:7D82csWXp23VHwICrU1jfiL99sRzcQ==,iv:9mCit3FG+ScmM5PFQD2I2F1SAwRyld2gCA1212K/lKk=,tag:TVyPz50+ANoaRO/n+ytt2g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +16,14 @@ sops:
         - recipient: age1257acz7c2nyglyxaq6ulxwdndrkvl8u7tx84hqvq5qp04ekws38s20gzxp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxU1k0STFmZS9VdW9tdUo5
-            NWN2RE5CYlpIN0J2MU94S0hPN3kvZytzbWpRCjRXK21WdGxiOW1xMEkwMElzNU8r
-            eFBHUENSR0Z5UW5nMDloMUE5MndLblUKLS0tIFZNeFZwNGNxT1poU0JIRVlkWlJt
-            NkJXbnIrZHl3ODVvR2lEakZDU1RWa2sKQoXXOawASJvNgAk1la+Ia2mX3kCY6YFP
-            rJZIv2QBgBNv/m7R8Urs8gebX0hMuXUudd1aXD6u7sb3QBTnHOL1xQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArbWVKaXdialdOWW1JSzVI
+            WHhXekp5a3lhRkpDRFp2eUcxbldVcGQ2UlUwCm5rZnZYMDBkT1BoU3hwZFppYWk2
+            cGhUYlB6eVRIcitlL3NSZWtjbUoxSjAKLS0tIHdGT0lUTDgzZ2tCVFhqQ0NyUzQx
+            dmI2WGo1U3Zsajh0SW1NdDVQSzdta00K62QXC1trBAOuX0AJKxlvuhcnWmMiqYOC
+            TFsZ7rtqxrhaGFVYkMz2CqUTcwIWrd42tFKN3Ue1GkdTXzvMSBJDBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-20T05:46:31Z"
-    mac: ENC[AES256_GCM,data:bkVysjwRAb7Ei++NLn+hsae80/gxqlAp9ecUQ9DJeGxreZeUdmLWamqlw2ZXr9tR3aAhswAIZva41uV9r9YtFx//XXjXyOIVJexbeGJ9dOotEBmZqMPjwc+TVjiy8Dkhea4mnNURLoNPVnylc7WRThQZerLoYsYjGlzIR+1gaeI=,iv:bqnJW5EWzfhg4Ao2+CdnbZLKvhsXbk++OIcOggRHVaA=,tag:APKgX5k5lmRvvXKAu3OETg==,type:str]
+    lastmodified: "2022-04-21T04:44:11Z"
+    mac: ENC[AES256_GCM,data:ZHY7SX5DWYPuF/mIOoBza4/pTtXSpRx5JEsvRwlUSMrN6y8lXW4XUO6W+q+xbrw7jvCmayv8Q+XBT/Cnrwsp3W2Q9661hHu+jqBrpS6/crQzdTumuxOriafz962UV3ZtBlMm5fSdnTASdtOuPV9D/SgaPVZriP52z/25zdaaeLQ=,iv:b9TjMZMmMroav2Ne12AhT1watZvn7asNr7hNpNUMLZo=,tag:5g1ZW7DiQ4mAKJvYiEC+jQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
