--- a/provision/ansible/inventory/host_vars/k8s-0.sops.yml
+++ b/provision/ansible/inventory/host_vars/k8s-0.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:REBb386wxg==,iv:DyxuNpscvT94B1YhVriH/MoFEfW3nWJxYMI4zrOl1/0=,tag:ehiYCoEJPHnW5LcKPJdKOg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:cRTYUXPFeOU=,iv:DV9CocOLha2VnOBxEEnpKWTxjNOjrfzMSLfSOa97HAE=,tag:QaLCHBMkc71M14V4dxKBMQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:x9J3FGRyIQ==,iv:VYkzlgzRJD3YmfxGmBop0UGwE+NV5fEr4x6t/rXEzfk=,tag:kDn+8/PvcgYtBiKDuAVHFg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:mz1LfDW/5WE=,iv:Kj6XGAsoHn6b/mzgKnFBfzEUeJ0vxVBsvumkou70THc=,tag:Zyd3Jxa6jxRRedz5jZnU5w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1257acz7c2nyglyxaq6ulxwdndrkvl8u7tx84hqvq5qp04ekws38s20gzxp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCQW5DSzNwTzRXeVQ4Vklz
-            R2cweldMdjdoRXBJVlV0MHdGSlpvVjF5S0dNCnp0UDV3SDIyLzU2U3BLcEFwR3d1
-            QW5DbWFTWWFKeEJsLzBHakZmSzVPeUUKLS0tIFBWcHFlb3V0ajhrRkJET0JzakNn
-            b0kxd1JTajRzblBlSHdINlBUOXdkNjgKGbgTwsx0bbirhRmuWLfgP3mW0NSL7HT3
-            AM5EimxULyBkouLkriVknZ5C67ikhc9VLZkqaRhzDDir0NgdXJFZUQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0eTQrVEJ2QWlQT2pkMk9l
+            aUNxdVJMeG9xVWVxQytya2t0UzdMdVNES0FJCkRIdFhBZ3dVV0p3Q1Zzenk3WTFq
+            VUQrWmZHMUs2bG1PWnUyUXhqeExISkEKLS0tIHpkSUtXeGphMTlDZnZQdURkdmdT
+            T2JEYWJ0WHV0ZjB5NWtJWWFrVTJyU28Kg+FbZpxhYP85UwBhPYKwQJi30WrRRhD9
+            XFuyQjcXrlIPaJSOrHGh3s1iqGOAyr4C0/8ouyJVYO9sgX50kSvi2w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-20T05:21:56Z"
-    mac: ENC[AES256_GCM,data:BSqdafxxp3t86oNei4ll4bzeC2PlTFI18dAfE317n28IX337RMuHwDGSD87bN7Yfi+5RCsIQcAA5hwA8+YNxdnvebPO7x5liVDhX45+sWavZMtBhnEjV3u5AfoXbnbec0iGYzsWFlWojHngo5uRQ3ZDIvbr2CywtvU6AoRVBN8M=,iv:rA0AFtnqmzdFGk7NTziUA/l7sofRNk5keMgHaoZCu2M=,tag:itUtgfuTd+8gwuVXNdqWJg==,type:str]
+    lastmodified: "2022-04-21T04:44:11Z"
+    mac: ENC[AES256_GCM,data:sUUVxUQ+6q6nTb6LVYTxMFNRYJAI2sOjTMGPNJ6Sc0l6Os5VOmQF4x2bONh5/a4Cr3iGH+JyQGf27HmWnMYvlOeOUFUbN18C/tLBB8gMHiGJD62Zj5xkBVIECigtBDoOOrnY5DlX0fxYWgrkhDNQ6FSqIwmjsqeNsbicvfb4E3I=,iv:01XDtrAM4e2twCZzIaCS/pWNRNnMaqFkuBZUwiWDr6c=,tag:OFe24UZlNnke14VbbsqlVg==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.2
