--- a/provision/ansible/inventory/host_vars/k8s-1.sops.yml
+++ b/provision/ansible/inventory/host_vars/k8s-1.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:y8elYBYPXw==,iv:HRGFxLqEjMs+OIAUyl2+7GHLas6XAwcxW2cNNbIc4BA=,tag:MLPdDMtpCrkByfQdKOXEAA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:UsQeQ4ow+3s=,iv:Qw66NKH4Luv/ct9xEkZGkS8gtLhfoO/eo6sMgpQD1lI=,tag:Sls//5MPrlIY2+Q794h4sw==,type:str]
+ansible_user: ENC[AES256_GCM,data:r7o5joi34Q==,iv:JoHe2nbXcBGkDBNO17LR2kXVBHU/XdMyKDVspPNerSI=,tag:QUoPdnT3dgP82njT7qbccQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:NgwzaDARJR0=,iv:mbgvRqihwC4OY1vw0GdSNV7pY93c5i9jONYV4ZadNwg=,tag:HCnnIhamN0JfPTeVf5+A6g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1257acz7c2nyglyxaq6ulxwdndrkvl8u7tx84hqvq5qp04ekws38s20gzxp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoRzZFUVllbnNKaTQvODlY
-            QzN4RExlNm9NbGhkaHRrZ3lrSEZLZGhVVkVNCmcvcVdYaVZIQWUwdkYvU0toUmg2
-            K0dOTHlFVzArU2NZVDdvK0JWb3M0dHMKLS0tIFNUR2phakR3THBITCtWUEFvUHBC
-            aXJIWHpMb2VrVUNiekNLZmxqMjRaWHcKMdsmLh0SGUWNQ7dZAKeNK9Qg3d/zuENp
-            OfwCJJEbLu1t7fh7UREtGyH77wFKjXcPs/vnLymWSVL6TUO88m2tNQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkZllzb3hKb0xORTNqRDZC
+            RzZkaVBkRzZuUmlrbnNCTy90Qm80dlIwVXcwCjRzRi9jWWtxa0wwUlhnTjE2NUIy
+            WUFpSjI4V2F3QS8zTlZUYUtROGNJdlkKLS0tIFpqNTFKT3BrakFQWjZzdDVJR2Rp
+            MUxDQ2VHNmtXbjYwYU9WWldmRlUvaWMK1wMmh9CAsHclG5/dIcMbxGBxs1hHDCRP
+            TiAdqG5JJR8mcAuLxr8YPckd5OLCdJOWee7DIIDGSCwHLPryBhff1g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-20T05:21:56Z"
-    mac: ENC[AES256_GCM,data:z4l+J9UqhgRa0Ii24cIA2XLktwJ1FmNoBHLZ7yZHTyNeTd0Tph5Iwr1EzDVQ1aqh0BwjcxE92DT/JA3Oslh5OHNrTDrAchEKjAlKzuogeUm3hmpW5rHph4J17dwYMf/DnXkRBKyRuJqcLw0vAirOS9CAG5QpTg3xtGIIdq2FQwk=,iv:GySDqeypFyYcgkKlNnuPDYx/lvekkOplq4UD3YW07+g=,tag:J6jmV5df2MTY8eV773g7SA==,type:str]
+    lastmodified: "2022-04-21T04:44:11Z"
+    mac: ENC[AES256_GCM,data:QCuF8UaWDWMd1A+j7PAoDsd3CUCznjSE1IU6sIKmKJyEh9gP+mFbHD/TVF05VaW363RyBJBSQGJSa0UwRF7NyLpjBnWkYEm4hWSJTgbJ3m8pcQ7Q5BvESvSEMYghAZoq6+vaA95kdp6HN3cR+NF0VokmR9l+AG9ZDOEF4nuA90I=,iv:xZuf3IiM8d++urJY3vMwLjM+A6gKcRbYECBNliaFEGU=,tag:SRIGNot+XWgPjR0wk8kM8g==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.2
