--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -9,3 +9,5 @@ kubernetes:
       hosts:
         k8s-1:
           ansible_host: 192.168.1.201
+        k8s-2:
+          ansible_host: 192.168.1.202
