--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,8 +5,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:oDBxD69s4Ik7RocjNNQ=,iv:61QFJ/DpdpNSCuQg60W2gJZLy97loBfCvE+cVAFhzF4=,tag:3Jz0guyrF4RT5g18xFsJ4A==,type:str]
+    CLUSTER_DOMAIN: ENC[AES256_GCM,data:TJFhTIHTjMggz4RIeyQ=,iv:r9CQmH9UkDCc6FPDarrPNtD8Ao80U2AQcXrvPh8I5Z4=,tag:3k63J0OfSauqI3Gnq9DssQ==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:7D82csWXp23VHwICrU1jfiL99sRzcQ==,iv:9mCit3FG+ScmM5PFQD2I2F1SAwRyld2gCA1212K/lKk=,tag:TVyPz50+ANoaRO/n+ytt2g==,type:str]
+    FS_GROUP: ENC[AES256_GCM,data:qBu6XtI=,iv:hJr+vmBfVkJKI60VVlnASQETO0J2aMpuMJJ6ku84S58=,tag:cFhF3ulhB3LA4xfG3kqoZw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +23,8 @@ sops:
             dmI2WGo1U3Zsajh0SW1NdDVQSzdta00K62QXC1trBAOuX0AJKxlvuhcnWmMiqYOC
             TFsZ7rtqxrhaGFVYkMz2CqUTcwIWrd42tFKN3Ue1GkdTXzvMSBJDBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-21T04:44:11Z"
-    mac: ENC[AES256_GCM,data:ZHY7SX5DWYPuF/mIOoBza4/pTtXSpRx5JEsvRwlUSMrN6y8lXW4XUO6W+q+xbrw7jvCmayv8Q+XBT/Cnrwsp3W2Q9661hHu+jqBrpS6/crQzdTumuxOriafz962UV3ZtBlMm5fSdnTASdtOuPV9D/SgaPVZriP52z/25zdaaeLQ=,iv:b9TjMZMmMroav2Ne12AhT1watZvn7asNr7hNpNUMLZo=,tag:5g1ZW7DiQ4mAKJvYiEC+jQ==,type:str]
+    lastmodified: "2022-04-22T02:29:52Z"
+    mac: ENC[AES256_GCM,data:oAvV/o5TymxSRLxW5vwJn0SK9wpdoJTwH9VDROOx49rqGbCfZjbLQi4zDvL5wVV6+TTYvwPgeW4ne/hAxXHAUMk/7DEi0XzGQzlU0IKymuLUKruerp8n8K+sagvfeZML8Ga5rK2UhafIPCMvVhzPXilhpAEXuHv0MnPActh89f8=,iv:6LCqflhlsnn160Db1iJQmmSSiJ9ociDfhccUzItld8Y=,tag:1OXp16tLhN6Zk0h1PtdReA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
