--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -9,3 +9,4 @@ data:
   METALLB_K8S_GATEWAY_ADDR: 192.168.1.220
   METALLB_TRAEFIK_ADDR: 192.168.1.221
   NAS_ADDR: 192.168.1.128
+  TZ: America/Vancouver
