--- a/cluster/apps/paperless/kustomization.yaml
+++ b/cluster/apps/paperless/kustomization.yaml
@@ -1,10 +1,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: paperless
 resources:
-  - home
-  - kube-system
-  - media
-  - networking
   - paperless
-  - system-upgrade
