fix autocomplete typo

--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - namespaces
   - cert-manager
-  - csi-driver-nfs.yaml
+  - csi-driver-nfs
   - kube-system
   - kubernetes-dashboard
   - longhorn-system
