Revert "remove apps"
This reverts commit 127dcd8c289033c6ce699a4d792afd6c6ab1f3eb.

--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -5,8 +5,10 @@ resources:
   - namespaces
   - cert-manager
   - csi-driver-nfs
+  - home
   - kube-system
   - kubernetes-dashboard
   - longhorn-system
   - media
   - metallb-system
+  - paperless
