--- a/cluster/core/longhorn-system/helm-release.yaml
+++ b/cluster/core/longhorn-system/helm-release.yaml
@@ -31,6 +31,7 @@ spec:
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
         kubernetes.io/ingress.class: traefik
+        hajimari.io/appName: longhorn
         hajimari.io/enable: "true"
         hajimari.io/icon: server
         traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
