add more charts

--- a/cluster/apps/home/kustomization.yaml
+++ b/cluster/apps/home/kustomization.yaml
@@ -5,4 +5,9 @@ namespace: home
 resources:
   - appdaemon
   - cloudflared
+  - esphome
   - hajimari
+  - home-assistant
+  - uptime-kuma
+  - zigbee2mqtt
+  - zwave2mqtt
