--- a/cluster/core/home/persistent-volume.yaml
+++ b/cluster/core/home/persistent-volume.yaml
@@ -21,3 +21,95 @@ spec:
     volumeAttributes:
       server: ${NAS_ADDR}
       share: /volume1/shared/code/appdaemon
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: code-home-assistant-pv
+spec:
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: nfs-csi
+  mountOptions:
+    - nconnect=8  # only supported on linux kernel version >= 5.3
+    - hard
+    - nfsvers=4.1
+  csi:
+    driver: nfs.csi.k8s.io
+    readOnly: false
+    volumeHandle: code-home-assistant-pv-id
+    volumeAttributes:
+      server: ${NAS_ADDR}
+      share: /volume1/shared/code/home-assistant
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: code-zigbee2mqtt-pv
+spec:
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: nfs-csi
+  mountOptions:
+    - nconnect=8  # only supported on linux kernel version >= 5.3
+    - hard
+    - nfsvers=4.1
+  csi:
+    driver: nfs.csi.k8s.io
+    readOnly: false
+    volumeHandle: code-zigbee2mqtt-pv-id
+    volumeAttributes:
+      server: ${NAS_ADDR}
+      share: /volume1/shared/code/zigbee2mqtt
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: code-zwave2mqtt-pv
+spec:
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: nfs-csi
+  mountOptions:
+    - nconnect=8  # only supported on linux kernel version >= 5.3
+    - hard
+    - nfsvers=4.1
+  csi:
+    driver: nfs.csi.k8s.io
+    readOnly: false
+    volumeHandle: code-zwave2mqtt-pv-id
+    volumeAttributes:
+      server: ${NAS_ADDR}
+      share: /volume1/shared/code/zwave2mqtt
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: code-esphome-pv
+spec:
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: nfs-csi
+  mountOptions:
+    - nconnect=8  # only supported on linux kernel version >= 5.3
+    - hard
+    - nfsvers=4.1
+  csi:
+    driver: nfs.csi.k8s.io
+    readOnly: false
+    volumeHandle: code-esphome-pv-id
+    volumeAttributes:
+      server: ${NAS_ADDR}
+      share: /volume1/shared/code/esphome
