--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -52,4 +52,4 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: code-{{ .Release.Name }}-pv-claim
+        existingClaim: code-esphome-pv-claim
