--- a/cluster/apps/home/zwave2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwave2mqtt/helm-release.yaml
@@ -35,7 +35,7 @@ spec:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           hajimari.io/enable: "true"
-          hajimari.io/icon: z-wave
+          hajimari.io/icon: "z-wave"
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
