--- a/cluster/apps/home/mosquitto/helm-release.yaml
+++ b/cluster/apps/home/mosquitto/helm-release.yaml
@@ -70,5 +70,5 @@ spec:
               hosts:
                 - "{{ .Release.Name }}-code.${CLUSTER_DOMAIN}"
         volumeMounts:
-          - name: config
+          - name: configinc
             mountPath: /config
