--- a/cluster/apps/home/mosquitto/helm-release.yaml
+++ b/cluster/apps/home/mosquitto/helm-release.yaml
@@ -35,7 +35,9 @@ spec:
         enabled: true
         storageClass: longhorn
         accessMode: ReadWriteOnce
+        size: 128Mi
       configinc:
         enabled: true
         storageClass: longhorn
         accessMode: ReadWriteOnce
+        size: 1Mi
