--- a/cluster/apps/networking/traefik/dashboard/ingress.yaml
+++ b/cluster/apps/networking/traefik/dashboard/ingress.yaml
@@ -5,18 +5,18 @@ metadata:
   name: traefik-dashboard
   namespace: networking
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
-    hajimari.io/appName: "traefik"
+    cert-manager.io/cluster-issuer: letsencrypt-production
+    hajimari.io/appName: traefik
     hajimari.io/enable: "true"
-    hajimari.io/icon: "web"
-    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    hajimari.io/icon: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
 spec:
-  ingressClassName: "traefik"
+  ingressClassName: traefik
   tls:
     - hosts:
         - "traefik.${CLUSTER_DOMAIN}"
-      secretName: "traefik-dashboard-tls"
+      secretName: traefik-dashboard-tls
   rules:
     - host: "traefik.${CLUSTER_DOMAIN}"
       http:
