--- a/cluster/apps/home/mosquitto/helm-release.yaml
+++ b/cluster/apps/home/mosquitto/helm-release.yaml
@@ -47,11 +47,11 @@ spec:
         subPath: mosquitto.conf
         mountPath: /mosquitto/configinc/mosquitto.conf
         readOnly: true
-        existingClaim: mosquitto-secrets
+        name: mosquitto-secrets
       mosquitto-passwords:
         enabled: true
         type: secret
         subPath: passwords
         mountPath: /mosquitto/config/passwords
         readOnly: true
-        existingClaim: mosquitto-secrets
+        name: mosquitto-secrets
