--- a/cluster/apps/home/mosquitto/kustomization.yaml
+++ b/cluster/apps/home/mosquitto/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - helm-release.yaml
   - secret.sops.yaml
+  - persistent-volume.yaml
+  - persistent-volume-claim.yaml
