--- a/cluster/apps/home/zwavejs2mqtt/persistent-volume.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/persistent-volume.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: code-zwave2mqtt-pv
+  name: code-zwavejs2mqtt-pv
 spec:
   capacity:
     storage: 10Gi
@@ -17,7 +17,7 @@ spec:
   csi:
     driver: nfs.csi.k8s.io
     readOnly: false
-    volumeHandle: code-zwave2mqtt-pv-id
+    volumeHandle: code-zwavejs2mqtt-pv-id
     volumeAttributes:
       server: ${NAS_ADDR}
-      share: /volume1/shared/code/zwave2mqtt
+      share: /volume1/shared/code/zwavejs2mqtt
