add postgres operator

--- a/cluster/core/postgres/helm-release.yaml
+++ b/cluster/core/postgres/helm-release.yaml
@@ -11,7 +11,7 @@ spec:
       version: 1.8.0
       sourceRef:
         kind: HelmRepository
-        name: zalando-postgres-ui
+        name: zalando-postgres-ui-charts
         namespace: flux-system
       interval: 5m
   # https://github.com/zalando/postgres-operator/blob/master/charts/postgres-operator-ui/values.yaml
