add postgres operator

--- a/cluster/core/postgres/helm-release.yaml
+++ b/cluster/core/postgres/helm-release.yaml
@@ -27,6 +27,7 @@ spec:
         kubernetes.io/ingress.class: traefik
         traefik.ingress.kubernetes.io/router.entrypoints: websecure
         traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
+      ingressClassName: traefik
       hosts:
         - host: "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
           paths:
