Revert "add postgres operator"
This reverts commit cb612abacc5a29517ee9629380e3954a90ecee61.

--- a/cluster/core/postgres/helm-release.yaml
+++ b/cluster/core/postgres/helm-release.yaml
@@ -18,6 +18,7 @@ spec:
   values:
     envs:
       resourcesVisible: "True"
+      targetNamespace: # Show all namespaces
     ingress:
       enabled: true
       annotations:
