add postgres operator

--- a/cluster/core/postgres/helm-release.yaml
+++ b/cluster/core/postgres/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
         traefik.ingress.kubernetes.io/router.entrypoints: websecure
         traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
       hosts:
-        - host: postgres-operator-ui${CLUSTER_DOMAIN}
+        - host: postgres-operator-ui.${CLUSTER_DOMAIN}
           paths: [""]
       tls:
         - secretName: postgres-operator-ui-tls
